# VirtualDesktopQuest

./: Cargo.toml  README.md
src/: main.rs  shm.rs  traits.rs  types.rs
src/audio_capturers/: mod.rs  pipewire.rs
src/frame_capturers/: mod.rs  wayland_roots.rs
src/frame_capturers/wayland_roots/: backend.rs  mod.rs  output_info.rs  state.rs
src/utils/: mod.rs  shm.rs
src/utils/wayland/: wrappers.rs
src/virtual_desktop/: app_data.rs  manager.rs  mod.rs
