[package]
name = "screencapture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
wayland-client = "0.30.2"
wayland-protocols-wlr = { version = "0.1.0", features = ["wayland-client", "client"] }
