[package]
name = "screencapture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
derive_is_enum_variant = "0.1.1"
drm-fourcc = "2.2.0"
image = "0.24.7"
libc = "0.2.147"
smithay-client-toolkit = "0.17.0"
wayland-client = "0.30.2"
wayland-protocols-wlr = { version = "0.1.0", features = ["wayland-client", "client"] }
